Heimasíða fyrir Dr.Lagnir, grunnútgáfa

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "drlagnir",
+  "name": "dr-lagnir-website",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.11"
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.16.11",
+    "tailwindcss": "^4.1.18"
   }
 }
